# structured-long-horizon-reasoning

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html  medium.html  transactional_reasoning_theory.tex
reasoning_exec/publish/: __init__.py  render_mathjax_svg.mjs  tex_to_pages.py
