[project]
name = "structured-long-horizon-reasoning"
version = "0.1.0"
description = "Transactional structured execution for verifier-rich long-horizon reasoning tasks."
requires-python = ">=3.11"
dependencies = [
  "litellm>=1.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "orjson>=3.10",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10"
]
dspy = [
  "dspy>=2.6"
]

[project.scripts]
reasoning-eval = "reasoning_exec.eval.run_eval:app"
tex2pages = "reasoning_exec.publish.tex_to_pages:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasoning_exec"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["dspy", "pandas", "pandas.*"]
ignore_missing_imports = true
